# wasm-flocking

./: .gitignore  235.index.js  Cargo.toml  README.md  index.html  index.js  package.json  webpack.config.js
src/: boid.rs  geometry.rs  lib.rs  quadtree.rs  vecmath.rs
