[package]
name = "wasm-flocking"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.59"
wasm-bindgen = "0.2.82"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3.59"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]